Styling -Fixed remove item button styling -Aligned text in coffee divs -Added functionality to hide delete buttons until hovered

--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ h1{
     color: tan;
 }
 
+.font-pacifico {
+    font-family: pacifico, emoji;
+}
+
 #coffees {
     display:grid;
     place-items: center;
@@ -20,6 +24,15 @@ h1{
 #coffees {
     border: 5px solid burlywood;
 }
+
+.button-remove-item {
+    visibility: hidden;
+}
+
+.coffee:hover .button-remove-item {
+    visibility: visible;
+}
+
 body {
     height: 100vh;
 }
